--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  color: black;
+  text-align: center;
+}
+
+section#featured-property {
+  text-align: center;
+}
+section figure {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+section#featured-property p {
+  width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+nav {
+  text-align: center;
+}
+nav a {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background: grey;
+}
+
+div {
+  float: left;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  background: red;
+  opacity: inherit;
+  width: 25%;
+}
+
